--- a/Ruoyu/Updated_main.ipynb
+++ b/Ruoyu/Updated_main.ipynb
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "id": "wEA3guet8lK3"
    },
@@ -1317,7 +1317,7 @@
     "            #res.append([p, abs(tmp_dict['Demographic_Parity'][2]), abs(tmp_dict['Equal_Opportunity'][2]),\n",
     "            #       abs(tmp_dict['Equal_Odds'][2]), abs(tmp_dict['Overall_accuracy'][2])])\n",
     "        tmp_tmp = pd.DataFrame(res, columns=['p', 'checkpoint', 'train_error', 'Demographic_Parity', 'Equal_Opportunity', 'Equal_Odds', 'Overall_accuracy'])\n",
-    "        tmp_tmp.to_csv(RESULT_SAVE_PATH + f'/Abernethy_t_vs_fair_tmp_tmp_{p}.csv')\n",
+    "        tmp_tmp.to_csv(RESULT_SAVE_PATH + f'/Abernethy_t_vs_fair_tmp_tmp.csv')\n",
     "    res = pd.DataFrame(res, columns=['p', 'checkpoint', 'train_error', 'demographic parity', 'equal_opportunity', 'equal odds', 'overall accuracy'])\n",
     "    return res\n",
     "\n",
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "id": "X18cAEbtfN1i",
     "scrolled": true
@@ -1517,15 +1517,15 @@
     "print(RESULT_SAVE_PATH + '/Abernethy_t_vs_fair.csv')\n",
     "p_list = np.linspace(0.4, 1, 13)\n",
     "classifier = LogisticRegression()\n",
-    "df = Abernethy_generate_t_vs_fair(classifier,  10, p_list, 1000, 'Overall_accuracy')\n",
-    "df.to_csv(RESULT_SAVE_PATH + '/Abernethy_0.4 to 1_Overall_accuracy.csv')\n",
+    "df = Abernethy_generate_t_vs_fair(classifier,  10, p_list, 1000, 'Equal_Opportunity')\n",
+    "df.to_csv(RESULT_SAVE_PATH + '/Abernethy_0.4 to 1_Equal_Opportunity.csv')\n",
     "\n",
     "#Abernethy_generate_plot(classifier, sampling_algorithm, 10, [0.1, 0.2, 0.3, 0.4, 0.5], 100, 'Equal_Opportunity')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {
     "id": "alAv4M5QwQgT"
    },
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {
     "id": "jrHRVg_iwQtg"
    },
@@ -1708,8 +1708,8 @@
     "C_list = np.linspace(0.4, 1, 13)\n",
     "\n",
     "model = Shekhar_sampling(classifier,  train_dataset, test_dataset, 'group')\n",
-    "df = Shekhar_generate_t_vs_fair(classifier,  10, C_list, 1000,  loss_equal_opportunity)\n",
-    "df.to_csv(RESULT_SAVE_PATH + '/Shekhar_0.4 to 1_Equal_opportunity.csv')\n"
+    "df = Shekhar_generate_t_vs_fair(classifier,  10, C_list, 1000,  loss_01_func)\n",
+    "df.to_csv(RESULT_SAVE_PATH + '/Shekhar_0.4 to 1_01_loss.csv')\n"
    ]
   },
   {
