--- a/lawrence/plot_Abernethy_01loss.ipynb
+++ b/lawrence/plot_Abernethy_01loss.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "part1 = pd.read_csv(\"01_loss_Abernethy.csv\")\n",
-    "part2 = pd.read_csv('Ruoyu/tmp_result/Abernethy_0.4 to 1_Overall_accuracy.csv')\n",
+    "part2 = pd.read_csv('../Ruoyu/tmp_result/Abernethy_0.4 to 1_Overall_accuracy.csv')\n",
     "part2.columns = [\"index\", \"p\",\"checkpoint\",\"test error\",\"demographic parity\",\"equal_opportunity\",\"equal odds\",\"overall accuracy violation\"]\n",
     "part1.columns = [\"index\", \"p\",\"checkpoint\",\"test error\",\"demographic parity\",\"equal odds\",\"equal_opportunity\",\"overall accuracy violation\"]"
    ]
